force-app/main/default/objects/CoSellTracker__c/CoSellTracker__c.object-meta.xml
<CustomObject>
    <label>Co-Sell Tracker</label>
    <nameField>
        <displayFormat>CST-{000000}</displayFormat>
        <label>Co-Sell Tracker</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Co-Sell Tracker</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>