force-app/main/default/objects/CoSellTracker__c/fields/Alliance_Deal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Deal_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alliance Deal Registration</label>
    <referenceTo>Alliance_Deal_Registration__c</referenceTo>
    <relationshipLabel>Co-Sell Tracker</relationshipLabel>
    <relationshipName>Co_Sell_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>