force-app/main/default/objects/CoSellTracker__c/fields/AllianceAmount__c.field-meta.xml
<CustomField>
    <fullName>AllianceAmount__c</fullName>
    <label>Alliance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>