force-app/main/default/objects/CoSellTracker__c/fields/AllianceContractTerm__c.field-meta.xml
<CustomField>
    <fullName>AllianceContractTerm__c</fullName>
    <label>Alliance Contract Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-Year</fullName>
            </value>
            <value>
                <fullName>3-Year</fullName>
            </value>
            <value>
                <fullName>5-Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>