force-app/main/default/objects/CoSellTracker__c/fields/AllianceDealRegOutcome__c.field-meta.xml
<CustomField>
    <fullName>AllianceDealRegOutcome__c</fullName>
    <label>Alliance Deal Reg Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Need to Qualify</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Does not Qualify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>