force-app/main/default/objects/CoSellTracker__c/fields/AllianceManaged__c.field-meta.xml
<CustomField>
    <fullName>AllianceManaged__c</fullName>
    <defaultValue>&quot;Unknown&quot;</defaultValue>
    <label>Alliance Managed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>