force-app/main/default/objects/CoSellTracker__c/fields/AllianceOpportunityID__c.field-meta.xml
<CustomField>
    <fullName>AllianceOpportunityID__c</fullName>
    <label>Alliance Opportunity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>