force-app/main/default/objects/CoSellTracker__c/fields/AllianceSalesRep__c.field-meta.xml
<CustomField>
    <fullName>AllianceSalesRep__c</fullName>
    <label>Alliance Sales Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>