force-app/main/default/objects/CoSellTracker__c/fields/AllianceSalesRepEmail__c.field-meta.xml
<CustomField>
    <fullName>AllianceSalesRepEmail__c</fullName>
    <label>Alliance Sales Rep Email</label>
    <type>Email</type>
</CustomField>