force-app/main/default/objects/CoSellTracker__c/fields/AllianceSegment__c.field-meta.xml
<CustomField>
    <fullName>AllianceSegment__c</fullName>
    <label>Alliance Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>