force-app/main/default/objects/CoSellTracker__c/fields/AllianceStage__c.field-meta.xml
<CustomField>
    <fullName>AllianceStage__c</fullName>
    <label>Alliance Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-Does Not Qualify</fullName>
            </value>
            <value>
                <fullName>1-Entered</fullName>
            </value>
            <value>
                <fullName>2-Connected</fullName>
            </value>
            <value>
                <fullName>3-Deal Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>