force-app/main/default/objects/CoSellTracker__c/fields/AllianceTerritory__c.field-meta.xml
<CustomField>
    <fullName>AllianceTerritory__c</fullName>
    <label>Alliance Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>