force-app/main/default/objects/CoSellTracker__c/fields/Partner_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_Name__c</fullName>
    <formula>PartnerAccount__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Account Name</label>
    <type>Text</type>
</CustomField>