force-app/main/default/objects/CoSellTracker__c/fields/PartnerAccount__c.field-meta.xml
<CustomField>
    <fullName>PartnerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Alliance_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>