force-app/main/default/objects/CoSellTracker__c/listViews/All_Co_Sell_Trackers.listView-meta.xml
<ListView>
    <fullName>All_Co_Sell_Trackers</fullName>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Co-Sell Trackers</label>
</ListView>